Criadas variaves css e botao para mudança de tema

--- a/src/style.css
+++ b/src/style.css
@@ -1,39 +1,56 @@
 @font-face { 
     font-family: Migra;
-    src: url('/src/fonts/Migra-Extrabold.otf'); 
+    src: url('/src/fonts/Migra-Extrabold.otf');
 }
 
-body{
+body {
     font-family: "Neue Montreal", sans-serif;
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(84,86,87,1) 100%);
+    background: var(--background-gradient);
+    color: var(--text-color);
 }
+
+:root {
+    --background-gradient: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(84,86,87,1) 100%);
+    --header-footer-bg: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(84,86,87,1) 100%);
+    --border-color: rgba(240, 248, 255, .1);
+    --text-color: aliceblue;
+    --main-bg: gray;
+}
+
+.light-theme {
+    --background-gradient: linear-gradient(90deg, aliceblue 0%, lightgray 100%);
+    --header-footer-bg: linear-gradient(90deg, aliceblue 0%, lightgray 100%);
+    --border-color: rgba(0, 0, 0, 1);
+    --text-color: black;
+    --main-bg: aliceblue;
+}
+
 #header {
-    right: 28px;
-    left: 28px;
+    right: 0px;
+    left: 0px;
     margin-bottom: 0;
     position: fixed;
     top: 0;
     z-index: 2;
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(84,86,87,1) 100%);
-    border-bottom: 2px solid rgb(240, 248, 255, .1);
+    background: var(--header-footer-bg);
+    border-bottom: 2px solid var(--border-color);
 }
 
-.title a{
-    color: aliceblue;
+.title a {
+    color: var(--text-color);
     text-decoration: none;
     font-family: "Migra", sans-serif;
     float: left;
-    position: absolute;
-    top: 30%;
+    margin: 15px 0 0 30px;
 }
 
-.texto:hover{
+.title a:hover {
     color: gray;
-    border-bottom: 2px solid rgb(240, 248, 255, .1);
+    border-bottom: 2px solid var(--border-color);
     transition: ease .7s;
 }
 
-ul{
+ul {
     list-style: none;
     float: right;
 }
@@ -46,36 +63,35 @@ ul a {
     padding: 0 10px;
     margin: 0px 1em;
     text-decoration: none;
-    color: aliceblue;
+    color: var(--text-color);
 }
 
 ul a:hover {
     color: gray;
-    border-bottom: 2px solid rgb(240, 248, 255, .1);
+    border-bottom: 2px solid var(--border-color);
     transition: ease .7s;
 }
 
-#main{
+#main {
     clear: both;
-    border: 5px solid aliceblue;
+    border: 5px solid var(--text-color);
     border-radius: 7px;
     width: auto;
     position: relative;
     height: 1000px;
     margin-bottom: 20px;
-    position: relative;
     margin: 100px 28px;
-    background-color: gray;
+    background-color: var(--main-bg);
 }
 
-.about{
-    color: aliceblue;
+.about {
+    color: var(--text-color);
     margin: auto;
     text-align: center;
 }
 
-#footer{
-    color: aliceblue;
+#footer {
+    color: var(--text-color);
     position: fixed;
     height: 50px;
     bottom: 0;
@@ -84,13 +100,25 @@ ul a:hover {
     padding-top: 10px;
     text-align: center;
     clear: both;
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(84,86,87,1) 100%);
+    background: var(--header-footer-bg);
 }
 
-.linha{
+.linha {
     position: relative;
     width: 50%;
     left: 25%;
     padding-top: 10px;
-    border-top: 2px solid rgb(240, 248, 255, .1);
+    border-top: 2px solid var(--border-color);
 }
+
+.theme-button {
+    float: right;
+    position: relative;
+    background-color: transparent;
+    border: none;
+    color: var(--text-color);
+    cursor: pointer;
+    font-size: 15px;
+    margin-top: 15px;
+}
+
